Add spline component and rename Charliecloud to Clearly

--- a/doc/_ext/sphinx_core/styles/main.scss
+++ b/doc/_ext/sphinx_core/styles/main.scss
@@ -15,6 +15,7 @@
 @import "./components/_footer";
 @import "./components/_search";
 @import "./components/_copy";
+@import "./components/_spline";
 
 /* Layout */
 @import "./layout/_header";
