Refactor documentation components and introduce new directives
- Replaced the Spline directive with new Hero and Slider directives for enhanced documentation features.
- Updated the main navigation links in the Sphinx configuration for better user experience.
- Added corresponding styles for the Hero and Slider components, improving visual presentation.
- Removed obsolete Spline component and its associated styles to streamline the codebase.

--- a/doc/_ext/sphinx_core/styles/main.scss
+++ b/doc/_ext/sphinx_core/styles/main.scss
@@ -15,7 +15,8 @@
 @import "./components/_footer";
 @import "./components/_search";
 @import "./components/_copy";
-@import "./components/_spline";
+@import "./components/_slider";
+@import "./components/_hero";
 
 /* Layout */
 @import "./layout/_header";
@@ -49,11 +50,12 @@ html {
 }
 
 body {
-    min-height: 100vh;
-    font-feature-settings: normal;
-    -webkit-font-smoothing: antialiased;
-    background: var(--background);
-    color: var(--foreground);
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    color: #0d0d0d;
+    height: 100vh;
+    width: 100%;
     margin: 0;
 
     &.body--sidebar-open {
