--- a/doc/_ext/sphinx_core/styles/layout/_header.scss
+++ b/doc/_ext/sphinx_core/styles/layout/_header.scss
@@ -33,10 +33,10 @@
             .left__logo {
                 display: flex;
                 align-items: center;
-                margin-right: 1.5rem;
+                margin-right: 2rem;
     
                 img {
-                    margin-right: 0.5rem;
+                    margin-left: 1rem;
                 }
             }
     
@@ -44,14 +44,15 @@
                 display: flex;
                 align-items: center;
                 gap: 0.5rem;
-                font-size: 0.875rem;
-                font-weight: 500;
     
                 .navigation__link {
-                    font-size: 0.9rem;
-                    font-weight: 450;
-                    border-radius: 20px;
-                    padding: 0.375rem 1rem;
+                    padding: 0.5rem 1rem;
+                    border-radius: 2rem;
+                    display: flex;
+                    color: #657380;
+                    position: relative;
+                    font-weight: 350;
+                    cursor: pointer;
                     transition: color, background-color .15s ease-in-out;
     
                     &:hover:not(&--active) {
@@ -60,7 +61,7 @@
     
                     &--active {
                         background: #818b981a;
-                        font-weight: 500;
+                        color: unset;
                     }
                 }
             }
