--- a/doc/_ext/theme/styles/base/_variables.scss
+++ b/doc/_ext/theme/styles/base/_variables.scss
@@ -8,7 +8,7 @@
     --popover: hsl(0 0% 100%);
     --popover-foreground: hsl(222.2 47.4% 11.2%);
   
-    --border: hsl(214.3 31.8% 91.4%);
+    --border: #0000001a;
     --input: hsl(214.3 31.8% 91.4%);
   
     --card: hsl(0 0% 100%);
