--- a/doc/_ext/theme/styles/components/_hero.scss
+++ b/doc/_ext/theme/styles/components/_hero.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     margin-bottom: 3.5rem;
-    height: 27rem;
+    height: 30rem;
 
     h1 {
         font-size: 4.75rem;
@@ -18,7 +18,7 @@
         img {
             width: 74px;
             height: 74px;
-            border: 1px solid #dee1e4;
+            border: 1px solid var(--border);
             border-radius: 50%;
             margin-bottom: -8px;
             padding: 11px;
