--- a/doc/_ext/theme/styles/layout/_header.scss
+++ b/doc/_ext/theme/styles/layout/_header.scss
@@ -22,14 +22,19 @@
         margin: 0 auto;
         padding: 0 2rem;
 
-        .container__left {
+        .container__left,
+        .container__right {
             display: none;
             margin-right: 1rem;
+
+            &--float-end {
+                margin-left: auto;
+            }
     
             @media (min-width: 768px) {
                 display: flex;
             }
-    
+            
             .left__logo {
                 display: flex;
                 align-items: center;
@@ -40,7 +45,8 @@
                 }
             }
     
-            .left__navigation {
+            .left__navigation,
+            .right__navigation {
                 display: flex;
                 align-items: center;
                 gap: 0.5rem;
@@ -62,6 +68,11 @@
                     &--active {
                         background: #818b981a;
                         color: unset;
+                    }
+
+                    &--inverse {
+                        background: #292929;
+                        color: #ffffff;
                     }
                 }
             }
@@ -87,46 +98,6 @@
                 &:hover {
                     color: var(--accent-foreground);
                     background: transparent;
-                }
-            }
-        }
-    
-        .container__right {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex: 1;
-            gap: 0.5rem;
-    
-            @media (min-width: 640px) {
-                gap: 1rem;
-            }
-    
-            @media (min-width: 768px) {
-                justify-content: flex-end;
-            }
-    
-            .right__navigation {
-                display: flex;
-                align-items: center;
-                gap: 0.25rem;
-    
-                .navigation__link {
-                    display: inline-flex;
-                    align-items: center;
-                    justify-content: center;
-                    padding: 0;
-                    font-size: 0.875rem;
-                    font-weight: 500;
-                    border-radius: 0.375rem;
-                    transition: all 0.2s ease;
-                    height: 2.25rem;
-                    width: 2.25rem;
-
-                    &:hover {
-                        background: var(--accent);
-                        color: var(--accent-foreground);
-                    }
                 }
             }
         }
