Refactor documentation structure and improve styling
- Removed unnecessary content directives from multiple documentation files for cleaner presentation.
- Enhanced the installation guide with additional service start instructions for improved user experience.
- Updated sidebar navigation styles for better layout and readability.
- Adjusted hero component styles for improved visual consistency.

--- a/doc/_ext/theme/styles/components/_hero.scss
+++ b/doc/_ext/theme/styles/components/_hero.scss
@@ -4,8 +4,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 3.5rem;
-    height: 30rem;
+    margin-bottom: 2rem;
+    height: 32rem;
 
     h1 {
         font-size: 4.75rem;
@@ -37,6 +37,7 @@
     pre {
         border-radius: 2rem;
         padding: 1.125rem 2rem;
+        margin-top: 0;
         
         code {
             line-height: 1.5rem;
