Rename from "fromhost" to "equip"

--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
     position: relative;
     border-radius: 2rem;
-    background: #818b9814;
+    background: rgba(64, 64, 64, 0.06);
     width: calc(100% + 4rem);
     margin: 0 -2rem;
     height: 43rem;
