--- a/doc/_ext/theme/styles/components/_hero.scss
+++ b/doc/_ext/theme/styles/components/_hero.scss
@@ -2,26 +2,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background:
+        radial-gradient(
+            ellipse 180% 90% at center,
+            rgb(255, 255, 255) 0%,
+            rgba(244, 242, 244, 0) 100%
+        );
     justify-content: center;
     text-align: center;
-    margin-bottom: 2rem;
-    height: 32rem;
+    margin-top: -2.5rem;
+    height: 35rem;
 
     h1 {
         font-size: 4.75rem;
-        line-height: 6rem;
+        line-height: 6.5rem;
         letter-spacing: -.01em;
-        font-weight: 300;
-        max-width: 54rem;
+        font-weight: 600;
+        max-width: 57rem;
         margin-bottom: 1.25rem;
 
         img {
-            width: 74px;
-            height: 74px;
-            border: 1px solid var(--border);
-            border-radius: 50%;
-            margin-bottom: -8px;
-            padding: 11px;
+            width: 9rem;
+            margin-bottom: -1.75rem;
+            margin-left: 0.25rem;
         }
     }
 
@@ -30,19 +33,41 @@
         line-height: 1.75rem;
         letter-spacing: 0;
         font-weight: 300;
-        color: #657380;
-        margin-bottom: 2.25rem;
+        color: #707070;
+        margin-bottom: 2.75rem;
     }
 
-    pre {
-        border-radius: 2rem;
-        padding: 1.125rem 2rem;
-        margin-top: 0;
-        
-        code {
-            line-height: 1.5rem;
-            font-size: 0.95rem;
-            font-weight: 250;
+    nav {
+        display: flex;
+        column-gap: 1.25rem;
+
+        a {
+            box-shadow: 0 0 0 1px rgb(224, 224, 224);
+            padding: 0.75rem 1rem;
+            line-height: 1.25rem;
+            border-radius: 2rem;
+            position: relative;
+            column-gap: 0.5rem;
+            align-items: center;
+            font-weight: 500;
+            cursor: pointer;
+            display: flex;
+
+            &:first-child {
+                background: rgb(20, 20, 20);
+                padding: 0.75rem 1.25rem;
+                box-shadow: none;
+                font-weight: 400;
+                color: #ffffff;
+            }
+
+            i {
+                font-size: 1rem;
+                background: rgba(64, 64, 64, 0.08);
+                margin-right: -0.25rem;
+                border-radius: 50%;
+                padding: 0.25rem;
+            }
         }
     }
 }
