--- a/doc/_ext/theme/styles/main.scss
+++ b/doc/_ext/theme/styles/main.scss
@@ -55,8 +55,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    color: #0d0d0d;
-    height: 100vh;
+    color: rgb(20, 20, 20);
     width: 100%;
     margin: 0;
 
@@ -100,7 +99,6 @@ body {
         display: flex;
         position: relative;
         flex-direction: column;
-        height: 100%;
 
         @media (max-width: 768px) {
             padding: 0 1rem;
@@ -111,7 +109,7 @@ body {
             grid-template-columns: 240px minmax(0, 1fr);
             padding: 0 2rem;
             padding-top: 2rem;
-            max-width: 1240px;
+            max-width: 1294px;
             margin: 0 auto;
             gap: 1.5rem;
             width: 100%;
