--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -2,32 +2,31 @@
     flex-shrink: 0;
     max-height: 100%;
     overflow: auto;
-    width: 17rem;
+    width: 15rem;
     height: 100%;
     display: flex;
     flex-direction: column;
-    background: #f3f7fb;
-    padding: 1.5rem 0;
+    border-right: 1px solid rgba(64, 64, 64, 0.1);
+    padding: 1.75rem 0;
 
     .navigation__logo {
-        margin: 0 1.5rem 1.5rem;
+        margin: 0 1.75rem 1.5rem;
         height: 32px;
         width: fit-content;
         display: block;
     }
 
     .navigation__list {
-        padding: 0 0.75rem;
-        font-size: 0.9rem;
-        font-weight: 300;
+        padding: 0 1rem;
         height: 100%;
         display: flex;
         flex-direction: column;
 
         .list__title {
             padding: 0.5rem 0.75rem 0.75rem;
+            color: rgb(112, 112, 112);
             font-weight: 400;
-            color: #727676;
+            font-size: 0.875rem;
         }
 
         .list__divider {
@@ -40,18 +39,18 @@
 
         .list__link,
         .list__button {
+            transition: all 0.15s cubic-bezier(0,0,.2,1);
             color: inherit;
             font-size: inherit;
-            line-height: inherit;
-            font-weight: 350;
+            font-weight: 400;
+            line-height: 1.75rem;
             padding: 0.5rem 0.75rem;
-            height: 2.5rem;
             border-radius: 2rem;
             text-decoration: none;
             border: none;
+            color: rgb(112, 112, 112);
             background: none;
             width: 100%;
-            color: #657380;
             cursor: pointer;
             display: flex;
             flex-wrap: nowrap;
@@ -60,13 +59,16 @@
 
             &--active,
             &:active {
-                background: #d5e5fb;
-                color: #0167ff;
-                font-weight: 400;
+                background: rgba(237, 237, 237, 0.72);
+                color: inherit !important;
+
+                i {
+                    color: #707070 !important;
+                }
             }
 
             &:hover:not(.list__link--active) {
-                background: #818b981a;
+                color: inherit !important;
             }
 
             &:not(:last-child) {
