--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -4,7 +4,7 @@
     </a>
     <div class="navigation__list">
         <!-- Menu items -->
-        <div class="list__title">Home</div>
+        <div class="list__title">Projects</div>
         <a class="list__link list__link--active" href="/">
             <i style="font-size: 0.813rem;" class="fa-kit fa-dashboard"></i> Dashboard
         </a>
