--- a/doc/_ext/theme/styles/components/_slider.scss
+++ b/doc/_ext/theme/styles/components/_slider.scss
@@ -2,7 +2,20 @@
     position: relative;
     border-radius: 2rem;
     background: rgba(64, 64, 64, 0.06);
-    width: calc(100% + 4rem);
-    margin: 0 -2rem;
-    height: 43rem;
+    padding: 5rem 6.5rem 0;
+    width: 100%;
+
+    .slider__item {
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-top-left-radius: 1rem;
+            border-top-right-radius: 1rem;
+        }
+    }
+
+    .slider__caption {
+        display: none;
+    }
 }
