--- a/doc/_ext/theme/styles/layout/_footer.scss
+++ b/doc/_ext/theme/styles/layout/_footer.scss
@@ -1,7 +1,20 @@
 #footer {
+    background: rgb(20, 20, 20);
+
+    &:before {
+        content: "";
+        width: 100%;
+        height: 2rem;
+        display: block;
+        background: #ffffff;
+        border-bottom-left-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+    }
+
     .footer__container {
         text-align: center;
-        color: #657380;
+        color: rgb(173, 173, 173);
         font-weight: 350;
+        padding: 2rem 0;
     }
 }
